service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payday-batch-verifi
  namespace: payday-batch
spec:
  selector:
    app: payday-batch-verifi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
